Added support for using the Piano keyboard keys as command   + Added preference keys startStopKeys (default "21,108"), rewindKeys (default "21,107"), speedUpKeys (default "21,105") and speedDownKeys (default "21,103")   + These are comma separated list of integer Midi notes, when pressed in a same time, the application would start/stop, re-wind, speed up /spped down   + For speed up/speed down, when press first time, it starts increase/decrease every half a second, press again to stop the speed change   + Future change: the speed up/down after 5, starts to increase/decrease 5 at a time.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -154,6 +154,7 @@ endif()
 # here we define PIANOBOOSTER_SRCS variable that contains a list of all .cpp files
 # note that we don't need \ at the end of line
 SET( PIANOBOOSTER_SRCS
+    CommonUtil.cpp
     QtMain.cpp
     QtWindow.cpp
     GuiTopBar.cpp
